# 3-Programa

./: .gitignore  10.txt  100.txt  1000.txt  10000.txt  100000.txt  100000rez.txt  10000rez.txt  1000rez.txt  100rez.txt  10rez.txt  CMakeLists.txt  Galutinis.cpp  Galutinis.h  Generavimas.cpp  Generavimas.h  IsFailo.cpp  IsFailo.cpp.save-failed  IsFailo.h  IsFailoD.cpp  IsFailoD.h  IsFailoL.cpp  IsFailoL.h  IvestiPaciamZinomus.cpp  IvestiPaciamZinomus.h  Mediana.cpp  Mediana.h  Nuskaitymas.cpp  Nuskaitymas.h  Paleisti.cpp  PazymiuIvedimas.cpp  PazymiuIvedimas.cpp.save-failed  PazymiuIvedimas.h  README.md  Studentas.cpp  Studentas.h  duom.txt  git.cpp  main.cpp  q  (+11 more)
DOXYGEN/: _generavimas_8h_source.html  _nuskaitymas_8h_source.html  _studentas_8h_source.html  annotated.html  class_studentas-members.html  class_studentas.html  classes.html  dir_3df9d0d1748e71b2295a9a7e1f5ac2b8.html  dir_967d4a52cad2edae236cdf81087db17a.html  dir_cc3f2da932c1244b2598c95e1ddb3324.html  files.html  index.html
testai/: testavimas.cpp
